# storyville

./: .dockerignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  compose.yml  docker-compose.debug.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  run  tox.ini
.github/workflows/: release.yml  test.yml
project_name/: settings.py  urls.py
src/storyville/: __init__.py  apps.py  settings.py  urls.py
src/storyville/fixtures/: smoketest.json
src/storyville/static/mindvessel.com/: mindvessel.css
src/storyville/templates/iqlovecraft/: index.html
src/storyville/templates/storyville/blocks/: header_masthead.html
src/storyville/templates/veselosky.me/: index.html
src/storyville/templates/veselosky.me/blocks/: novels_card.html
static/veselosky.me/: veselosky.css
storyville/: adminsettings.py  distill.py  settings.py  staticpub.py  urls.py
storyville/fixtures/: smoketest.json
templates/genericsite/blocks/: header_masthead.html
templates/iqlovecraft/: index.html
templates/mindvessel/: base.html
templates/veselosky.me/: index.html
templates/veselosky.me/blocks/: novels_card.html
tests/: test_general.py
