[project]
name = "storyville"
version = "0.1.0"
description = "Vince's little corner of the web"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django >= 4.2.7, < 5.0",
    "django-commoncontent >= 0.3.0",
    "django-environ >= 0.10.0",
    "django-extensions >= 3.2.1",
    "django-rich >= 1.5.0",
    "django-sitevars >= 1.0.2",
    "django-tinymce >= 3.4.0",
    "docutils >= 0.19",
    "granian>=1.7.1",
    "pillow >= 10.0.1",
    "redis>=5.2.1",
    "rich >= 13.3.3",
    # If using celery, add these:
    # celery >= 5.2.7
    # django-celery-beat >= 2.5.0
    # hiredis >= 2.2.2
    # redis >= 4.5.4
]

# TODO Get setuptools build working
[build-system]
# With setuptools-scm, package data files (e.g. templates) that are tracked by git will
# be automatically detected and included. Without setuptools-scm, you would need to
# specify a file pattern in MANIFEST.in to collect them.
requires = ["setuptools>=66.1.1", "setuptools-scm>=7.0.5", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic.version]
attr = "storyville.__version__"

[tool.uv]
dev-dependencies = [
    "coverage>=7.2.2",
    "django-debug-toolbar>=4.0.0",
    "djlint>=1.36.3",
    "ipython>=8.12",
]

[tool.djlint]
close_void_tags = true
format_css = true
format_js = true
indent = 2
max_line_length = 119
profile = "django"
# https://www.djlint.com/docs/linter/#rules
# D018 (Django) Internal links should use the {% url ... %} pattern.
# H006 Img tag should have height and width attributes.
# H017 Void tags should be self closing.
# H021 Inline styles should be avoided.
# H023 Do not use entity references.
# H031 Consider adding meta keywords.
# H035 Meta tags should be self closing.
# T001 Variables should be wrapped in whitespace. Ex: {{ this }}
# T002 Double quotes should be used in tags.
ignore = "D018,H006,H021,H023,H031,T002"
include = "H017,H035"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "DJ"]
ignore = ["E501", "W505"]
